force-app/main/modules/creditSafe/objects/Creditsafe_Company_Activity__c/fields/Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Activity_Code__c</fullName>
    <description>Activity code of the company, and is used to identify the sector.</description>
    <label>Activity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>