force-app/main/modules/creditSafe/objects/Creditsafe_Company_Activity__c/fields/Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Activity_Description__c</fullName>
    <description>Activity description relating to the activity code.</description>
    <label>Activity Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>