force-app/main/modules/creditSafe/objects/Creditsafe_Company_Activity__c/fields/Creditsafe_Comp_Activity_Classification__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Comp_Activity_Classification__c</fullName>
    <description>Activity classification.</description>
    <label>Creditsafe Comp. Activity Classification</label>
    <referenceTo>Creditsafe_Comp_Activity_Classifications__c</referenceTo>
    <relationshipLabel>Creditsafe Company Activities</relationshipLabel>
    <relationshipName>Creditsafe_Company_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>